Fixed bug with reading temp file